--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,19 +1,21 @@
-.nav-bar{
+.nav-bar {
     height: fit-content;
     padding: 24px 64px;
     display: flex;
     justify-content: space-between;
-    position:sticky;
-    top:0;
+    align-items: center;
+    position: sticky;
+    top: 0;
     z-index: 999;
+    /* background-color: white; */
 }
 
-.logo{
+.logo {
     width: 135px;
     height: 40px;
 }
 
-.button-container{
+.button-container {
     background-color: transparent;
     border: 1px solid white;
     border-radius: 70px;
@@ -24,4 +26,68 @@
     justify-content: center;
     gap: 48px;
     font-size: 14px;
+}
+
+/* Hide Hamburger on Large Screens */
+.hamburger {
+    display: none;
+    cursor: pointer;
+}
+
+/* Sidebar Styles */
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 100%;
+    background: #0D0D0D;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    z-index: 1000;
+}
+
+.sidebar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sidebar-logo {
+    width: 120px;
+}
+
+.close-icon {
+    cursor: pointer;
+}
+
+.sidebar-links {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 40px;
+    font-size: 16px;
+}
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+    .button-container {
+        display: none;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    .nav-bar{
+        padding: 24px;
+    }
+
+    .mobile-btn{
+        height: 20px;
+    }
+
+   
 }
