--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -1,8 +1,7 @@
 /* Footer Container */
 .footer {
-    background-color: #111; /* Changed for better visibility */
+    background-color: transparent;
     color: white;
-    padding: 30px 20px;
     width: 100%;
   }
   
@@ -74,7 +73,7 @@
     margin-top: 20px;
     padding-top: 20px;
     text-align: center;
-    width: 100%;
+    /* width: 100%; */
   }
   
   .footer-bottom-container {
